--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --reporter spec",
     "start": "node server.js"
   },
   "repository": {
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/stephenliu8964/sit725-2023-t1-prac2-online1#readme",
   "dependencies": {
-    "ejs": "^3.1.9",
+    "chai": "^4.3.7",
     "express": "^4.18.2",
     "mongodb": "^4.4.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "request": "^2.88.2",
+    "mocha": "^10.2.0"
   }
 }
