--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "chai": "^4.3.7",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "mocha": "^10.2.0",
     "mongodb": "^4.4.1",
     "nodemon": "^3.0.1",
     "request": "^2.88.2",
-    "mocha": "^10.2.0"
+    "socket.io": "^4.7.2"
   }
 }
